# waml

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.ps1  eslint.config.mjs  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json
.claude/scripts/: context-fill.py
.claude/skills/run/: SKILL.md
.claude/workflows/: implement-plan.js
.github/workflows/: ci.yml
.superpowers/sdd/: task-3-report.md
crates/uaml/: Cargo.toml
crates/uaml-cli/: Cargo.toml
crates/uaml-cli/src/: commands.rs  io.rs  main.rs
crates/uaml-cli/src/lsp/: map.rs
crates/uaml-wasm/src/: lib.rs
crates/uaml/src/: diagnostic.rs  frontmatter.rs  grammar.rs  index_md.rs  layout.rs  lib.rs  model.rs  okf.rs  parse.rs  serialize.rs  syntax.rs  validate.rs
crates/uaml/src/ops/: mod.rs  pkg.rs  rename.rs  selector.rs
crates/uaml/src/solve/: geometry.rs  mod.rs  potentials.rs  resolve.rs
crates/uaml/tests/: golden.rs  solver_golden.rs
crates/uaml/tests/fixtures/: orders-domain.md
crates/waml/: Cargo.toml
crates/waml-cli/: Cargo.toml
crates/waml-cli/src/: commands.rs  io.rs  main.rs  ops_dto.rs
crates/waml-cli/src/lsp/: bundle.rs  map.rs  mod.rs  server.rs
crates/waml-cli/tests/: cli_e2e.rs  lsp_e2e.rs
crates/waml-editor/: Cargo.toml  build.rs
crates/waml-editor/src/: action_link.rs  app.rs  app_menu.rs  camera.rs  canvas.rs  caption_button.rs  cli.rs  config.rs  conflict_badge.rs  constraint_toggle.rs  doc_tabs.rs  doc_view.rs  draw_hud.rs  frame.rs  icon_button.rs  icons.rs  inspector.rs  inspector_panel.rs  load.rs  logo.rs  main.rs  nav.rs  node_design_editor.rs  radial.rs  radial_popup.rs  recent_row.rs  scene.rs  selection_toolbar.rs  shortcuts_overlay.rs  sizing.rs  source_view.rs  start_screen.rs  theme_atlas.rs  tool_dock.rs  tree.rs  tree_panel.rs  veil.rs  waml_button.rs
crates/waml-editor/src/card/: mod.rs
crates/waml-editor/src/popup/: base.rs  marking.rs  mod.rs  root.rs
crates/waml-editor/tests/: README.md
crates/waml-ops-dto/: Cargo.toml
crates/waml-ops-dto/src/: lib.rs
crates/waml-wasm/: Cargo.toml
crates/waml-wasm/src/: lib.rs
crates/waml-wasm/tests/: native.rs
crates/waml/src/: adornment.rs  frontmatter.rs  grammar.rs  index_md.rs  layout.rs  lib.rs  model.rs  multiplicity.rs  okf.rs  parse.rs  seed.rs  serialize.rs  slug.rs  syntax.rs  uml.rs  validate.rs  wire.rs
crates/waml/src/ops/: mod.rs  pkg.rs  rename.rs
crates/waml/src/solve/: mod.rs  potentials.rs  resolve.rs  route.rs  sizing.rs
crates/waml/tests/: golden.rs  layout_serde_roundtrip.rs  ops_golden.rs  serde_shape.rs  solver_golden.rs
crates/waml/tests/fixtures/: orders-domain.md
docs/: uaml-spec.md
docs/design/: hud-icons-mock.html  hud-tag-radial-mock.html  hud-tags-mock.html
docs/superpowers/backlog/: drag-place-viz-threads.md
docs/superpowers/plans/: 2026-07-11-uaml-manipulation-commands.md  2026-07-11-uaml-rust-tooling-1-foundations.md  2026-07-11-uaml-wasm-ops-editing.md  2026-07-12-diagram-layout-solver.md  2026-07-12-diagram-solver-wasm-bridge.md  2026-07-12-straighten-edges-shared-band.md  2026-07-12-uaml-vscode-serverpath-resolution.md  2026-07-12-uaml-wasm-frontend-1b.md  2026-07-15-diagram-field-persistence.md  2026-07-15-diagram-properties-panel-v2.md  2026-07-15-read-only-inspector-edit-dialog.md  2026-07-16-diagram-properties-body-cleanup.md  2026-07-16-new-package-flow.md  2026-07-17-element-pool-rename.md  2026-07-18-focus-card-shape-tree.md  2026-07-18-sequence-flat-model.md  2026-07-20-centralize-icons.md  2026-07-22-orthogonal-edge-router.md  2026-07-23-diagram-view-seam-plan.md  2026-07-23-op-place-set-layout-write-back.md  2026-07-23-projecttree-header-turtle-migration.md  2026-07-24-inspector-groups-edges-selectable.md  2026-07-24-inspector-turtle-widgets.md
docs/superpowers/plans/completed/: 2026-07-13-okf-fullpath-keying.md  2026-07-22-edge-route-render.md  2026-07-23-drag-place-stage4-constraint-viz.md  2026-07-23-node-context-menu.md  2026-07-24-conflict-list-grouped-delete.md  2026-07-24-inspector-groups-edges-selectable.md
docs/superpowers/plans/drag-place-constraint-viz-redesign/: README.md  task-1-solver-dropped-report.md  task-2-scene-carry-report.md  task-3-veil-geometry.md  task-4-veil-renderer.md  task-5-visibility-toggle.md  task-6-parallax-scrubber.md  task-7-conflict-error-list.md
docs/superpowers/plans/notes/: 2026-07-15-tsify-spike-findings.md
docs/superpowers/specs/: 2026-07-11-attribute-cardinality-delimiter.md  2026-07-11-diagram-layout-language-design.md  2026-07-11-uaml-manipulation-commands-design.md  2026-07-11-uaml-wasm-frontend-design.md  2026-07-12-central-edit-panel-design.md  2026-07-12-diagram-solver-wasm-bridge-design.md  2026-07-12-floating-collapsible-inspector-design.md  2026-07-12-keyboard-shortcut-hints-design.md  2026-07-12-uaml-packages-navigator-design.md  2026-07-12-uaml-vscode-serverpath-resolution-design.md  2026-07-15-read-only-inspector-edit-dialog-design.md  2026-07-16-navigator-panel-promotion-design.md  2026-07-16-new-package-flow-design.md  2026-07-17-uml-element-model-domain-design.md  2026-07-18-draw-hud-frame-design.md  2026-07-18-focus-card-shape-tree.md  2026-07-19-editor-start-screen-shell-design.md  2026-07-19-logo-radial-menu-design.md  2026-07-19-radial-command-menu-design.md  2026-07-19-start-screen-recents-layout-refactor-design.md  2026-07-21-fps-heat-wordmark-design.md  2026-07-22-edge-route-render-design.md  2026-07-22-orthogonal-edge-router-design.md  2026-07-23-drag-place-stage3-design.md  2026-07-23-hud-turtle-migration-design.md  2026-07-24-conflict-list-grouped-delete-design.md  2026-07-24-inspector-groups-edges-selectable-design.md  2026-07-24-source-view-markdown-render-design.md
docs/superpowers/specs/drafts/: 2026-07-16-model-graph-type-rename-design.md
scripts/: build-wasm.mjs  gen-all-icons.py  gen-icon.py  gen-pin-icon.py  gen-template-bundles.mjs  run-native.ps1
(+9 files in other folders)
