[workspace]
resolver = "2"
members = ["crates/waml", "crates/waml-cli", "crates/waml-ops-dto", "crates/waml-wasm", "crates/waml-editor"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"

[workspace.dependencies]
regex = "1"
pulldown-cmark = { version = "0.12", default-features = false }
ttf-parser = "0.25"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
tower-lsp = "0.20"
