[package]
name = "waml-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line tools (check, fmt) for WAML documents."

[[bin]]
name = "waml"
path = "src/main.rs"

[dependencies]
waml = { path = "../waml" }
waml-ops-dto = { path = "../waml-ops-dto" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }
