[package]
name = "waml-editor"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native, read-only GPU viewer for WAML/OKF diagrams."

[dependencies]
waml = { path = "../waml", features = ["serde"] }
# Pinned to a fork of makepad/makepad@dev (redoz/makepad, branch waml-fxc-opt — stacked on
# popup-transparent, adds the FXC-optimization fix for the trig-sdf "arc spike"). rev is the
# reproducible pin; survives upstream force-push / branch renames.
makepad-widgets = { git = "https://github.com/redoz/makepad.git", rev = "525aae6a" }
taffy = "0.12.2"
serde = { workspace = true }
serde_json = { workspace = true }
# `home_dir()` for the `~/.waml` config root (see src/config.rs).
dirs = "5"
rfd = "0.15"

[target.'cfg(windows)'.build-dependencies]
# Embeds resources/icon.ico into the exe (see build.rs).
winresource = "0.1"
