[package]
name = "waml-editor"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native, read-only GPU viewer for WAML/OKF diagrams."

[dependencies]
waml = { path = "../waml", features = ["serde"] }
# Pinned to a fork of makepad/makepad@dev (redoz/makepad, branch waml-scroll-occlusion —
# stacked on waml-fxc-opt, adds handled_x/handled_y scroll occlusion to hits() so overlays
# and popups stop bleeding scroll into the canvas). rev is the reproducible pin; survives
# upstream force-push / branch renames.
makepad-widgets = { git = "https://github.com/redoz/makepad.git", rev = "0062dc5e" }
taffy = "0.12.2"
serde = { workspace = true }
serde_json = { workspace = true }
# `home_dir()` for the `~/.waml` config root (see src/config.rs).
dirs = "5"
rfd = "0.15"

[target.'cfg(windows)'.build-dependencies]
# Embeds resources/icon.ico into the exe (see build.rs).
winresource = "0.1"
