[package]
name = "waml-ops-dto"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Serde wire contract (OpDto) for WAML ops, shared by CLI and WASM."

[dependencies]
waml = { path = "../waml" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
