[package]
name = "waml-wasm"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM bindings for the WAML core (parse/model/validate/ops)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
waml = { path = "../waml", features = ["wasm"] }
waml-ops-dto = { path = "../waml-ops-dto" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
tsify-next = { version = "0.5.6", features = ["js"] }
