[package]
name = "waml"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for parsing, serializing, and validating WAML documents."

[dependencies]
regex.workspace = true
pulldown-cmark.workspace = true
serde = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2.126", optional = true }
wasm-bindgen-utils = { version = "0.1.3", optional = true }
tsify-next = { version = "0.5.6", features = ["js"], optional = true }

[features]
default = []
serde = ["dep:serde"]
wasm = ["serde", "dep:tsify-next", "dep:wasm-bindgen", "dep:wasm-bindgen-utils"]

[dev-dependencies]
serde_json = { workspace = true }
